--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "license": "MIT",
   
   "scripts": {
-    "dev":"ts-node-dev --exit-child src/server.ts"
+    "dev":"ts-node-dev --exit-child src/server.ts",
+    "build":"tsc --build",
+    "start":"node dist/server.js"
   },
   "dependencies": {
     "@prisma/client": "^4.6.1",
